--- a/microservices/frontend/static/styles.css
+++ b/microservices/frontend/static/styles.css
@@ -1,11 +1,3 @@
-/* Body Styles */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5; /* Light blue background */
-    color: #333; /* Dark text color */
-    padding: 20px;
-}
-
 /* Form Styles */
 form {
     max-width: 400px;
@@ -34,4 +26,128 @@ button {
 
 button:hover {
     background-color: #ff8c00; /* Darker orange on hover */
+}
+
+header {
+    background-color: #000000;
+    color: #ffffff;
+    padding: 20px;
+    text-align: center;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #ffffff;
+    color: #000000;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar {
+    background-color: #000000;
+    color: #ffffff;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar-left {
+    flex-grow: 1;
+}
+
+.navbar-right {
+    display: flex;
+    align-items: center;
+}
+
+.title {
+    margin: 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.product {
+    background-color: #f2f2f2;
+    border-radius: 8px;
+    margin: 10px;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+}
+
+.product h2 {
+    margin-bottom: 10px;
+}
+
+.product-image {
+    max-width: 100%;
+    height: auto;
+    margin-top: 10px;
+}
+
+.add-to-cart-button {
+    background-color: #000000;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.footer {
+    text-align: center;
+    margin-top: 20px;
+    padding-bottom: 20px;
+}
+
+.view-cart-button {
+    background-color: #000000;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+
+.cart-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.cart-item {
+    background-color: #f2f2f2;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.item-info {
+    display: block;
+}
+
+.total {
+    font-size: 1.2em;
+    margin-top: 20px;
+}
+
+.checkout-button {
+    background-color: #000000;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.empty-cart {
+    text-align: center;
+    font-style: italic;
 }
