--- a/microservices/frontend/templates/cart.html
+++ b/microservices/frontend/templates/cart.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-left">
-            <h1 class="title">Shopping Cart</h1>
+            <h1 class="title">Shopping Cart for our website</h1>
         </div>
         <div class="navbar-right">
             <a href="{{ url_for('home') }}" class="home-button">Home</a>
