--- a/microservices/frontend/templates/cart.html
+++ b/microservices/frontend/templates/cart.html
@@ -12,7 +12,7 @@
             <h1 class="title">Shopping Cart for our website</h1>
         </div>
         <div class="navbar-right">
-            <a href="{{ url_for('home') }}" class="home-button">Home</a>
+            <a href="{{ url_for('home') }}" class="home-button">Home Page</a>
         </div>
     </nav>
 
